kubernetes/setup/argocd/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-cd-ingress
  namespace: argo-cd
  labels:
    app.kubernetes.io/name: argo-cd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - argocd.yuriy-lab.cloud
    secretName: argocd-lab-tls
  rules:
    - host: "argocd.yuriy-lab.cloud"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: argo-cd-argocd-server
                port:
                  number: 8080
